[gd_scene load_steps=17 format=3 uid="uid://ciwex3y87jrg8"]

[ext_resource type="Script" uid="uid://dymyox16a5cje" path="res://ui/main_menu/meta_shop_panel.gd" id="1_script"]
[ext_resource type="Resource" uid="uid://45e0tpblxsns" path="res://systems/global/lists/master_character_list.tres" id="2_charlist"]
[ext_resource type="Resource" uid="uid://d5bu6epgfgbw" path="res://systems/global/lists/master_pack_list.tres" id="3_packlist"]
[ext_resource type="Script" uid="uid://lh323ejqh8v0" path="res://systems/metaprogression/meta_upgrade.gd" id="4_6kb6b"]
[ext_resource type="PackedScene" uid="uid://rxae3e4j0ebi" path="res://ui/main_menu/unlock_button.tscn" id="4_unlockbtn"]
[ext_resource type="PackedScene" uid="uid://djk8bwt6fg0ae" path="res://ui/main_menu/meta_upgrade_button.tscn" id="5_upgradebtn"]
[ext_resource type="Resource" uid="uid://cyxkh7fkxypuq" path="res://systems/metaprogression/upgrades/meta_move_speed.tres" id="6_movespeed"]
[ext_resource type="Resource" path="res://systems/metaprogression/upgrades/meta_damage.tres" id="7_damage"]
[ext_resource type="Resource" path="res://systems/metaprogression/upgrades/meta_firerate.tres" id="8_firerate"]
[ext_resource type="Resource" path="res://systems/metaprogression/upgrades/meta_crit_chance.tres" id="9_critchance"]
[ext_resource type="Resource" path="res://systems/metaprogression/upgrades/meta_crit_damage.tres" id="10_critdmg"]
[ext_resource type="Resource" path="res://systems/metaprogression/upgrades/meta_armor.tres" id="11_armor"]
[ext_resource type="Resource" path="res://systems/metaprogression/upgrades/meta_max_health.tres" id="12_health"]
[ext_resource type="Resource" path="res://systems/metaprogression/upgrades/meta_luck.tres" id="13_luck"]
[ext_resource type="Resource" uid="uid://jnefxjqeee8f" path="res://systems/metaprogression/upgrades/meta_pickup_radius.tres" id="14_pickup"]
[ext_resource type="Resource" path="res://systems/metaprogression/upgrades/meta_xp.tres" id="15_xp"]

[node name="MetaShopPanel" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -360.0
offset_top = -320.0
offset_right = 360.0
offset_bottom = 320.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")
character_list = ExtResource("2_charlist")
pack_list = ExtResource("3_packlist")
meta_upgrades = Array[ExtResource("4_6kb6b")]([ExtResource("11_armor"), ExtResource("9_critchance"), ExtResource("10_critdmg"), ExtResource("7_damage"), ExtResource("8_firerate"), ExtResource("13_luck"), ExtResource("12_health"), ExtResource("6_movespeed"), ExtResource("14_pickup"), ExtResource("15_xp")])
unlock_button_scene = ExtResource("4_unlockbtn")
meta_upgrade_button_scene = ExtResource("5_upgradebtn")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Meta Shop"
horizontal_alignment = 1

[node name="TabBar" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="StatsButton" type="Button" parent="MarginContainer/VBoxContainer/TabBar"]
custom_minimum_size = Vector2(0, 36)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
toggle_mode = true
button_pressed = true
text = "Stats"

[node name="CharactersButton" type="Button" parent="MarginContainer/VBoxContainer/TabBar"]
custom_minimum_size = Vector2(0, 36)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
toggle_mode = true
text = "Characters"

[node name="PacksButton" type="Button" parent="MarginContainer/VBoxContainer/TabBar"]
custom_minimum_size = Vector2(0, 36)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
toggle_mode = true
text = "Packs"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="StatsContent" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="HeaderContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/StatsContent"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer/StatsContent/HeaderContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "Stat Upgrades"

[node name="SoulsCount" type="Label" parent="MarginContainer/VBoxContainer/StatsContent/HeaderContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0.4, 1)
theme_override_font_sizes/font_size = 18
horizontal_alignment = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/StatsContent"]
layout_mode = 2
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/StatsContent/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 12
theme_override_constants/v_separation = 12
columns = 2

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer/StatsContent"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
text = "Back"

[node name="CharactersContent" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="HeaderContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/CharactersContent"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer/CharactersContent/HeaderContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "Character Unlocks"

[node name="SoulsCount" type="Label" parent="MarginContainer/VBoxContainer/CharactersContent/HeaderContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0.4, 1)
theme_override_font_sizes/font_size = 18
horizontal_alignment = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/CharactersContent"]
layout_mode = 2
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/CharactersContent/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 12
theme_override_constants/v_separation = 12
columns = 3

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer/CharactersContent"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
text = "Back"

[node name="PacksContent" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="HeaderContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/PacksContent"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer/PacksContent/HeaderContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "Pack Unlocks"

[node name="SoulsCount" type="Label" parent="MarginContainer/VBoxContainer/PacksContent/HeaderContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0.4, 1)
theme_override_font_sizes/font_size = 18
horizontal_alignment = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/PacksContent"]
layout_mode = 2
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/PacksContent/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 12
theme_override_constants/v_separation = 12
columns = 2

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer/PacksContent"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
text = "Back"
